Added support for commercial solver on pipeline

--- a/Notebooks/TEST_NOTEBOOK.ipynb
+++ b/Notebooks/TEST_NOTEBOOK.ipynb
@@ -185,6 +185,120 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "117"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "sum([len(mp_parallelSPs.subproblems[n].data.delivery_vessel) for n in range(13)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Using license file /Users/haukbjornland/gurobi.lic\n",
+      "Academic license - for non-commercial use only\n",
+      "Changed value of parameter LazyConstraints to 1\n",
+      "   Prev: 0  Min: 0  Max: 1  Default: 0\n",
+      "2021-05-16 16:08:01,144\tINFO services.py:1172 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n",
+      "\u001b[2m\u001b[36m(pid=32821)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32826)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32821)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32826)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32817)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32817)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32820)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32820)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32825)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32825)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32824)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32824)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32823)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32823)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32816)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32816)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32822)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32822)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32819)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32819)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32815)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32815)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32818)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32818)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32839)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32839)\u001b[0m Academic license - for non-commercial use only\n",
+      "\n",
+      ">>>ITERATION 1\n",
+      "Time spent solving MP: 0.001\n",
+      "Time spent solving SP: 0.255\n",
+      "BOUNDS: UB = 1478 | LB = 959 | Gap = 54.06 %\n",
+      "\n",
+      ">>>ITERATION 2\n",
+      "Time spent solving MP: 0.008\n",
+      "Time spent solving SP: 0.283\n",
+      "BOUNDS: UB = 1357 | LB = 1144 | Gap = 18.59 %\n",
+      "\n",
+      ">>>ITERATION 3\n",
+      "Time spent solving MP: 0.03\n",
+      "Time spent solving SP: 0.227\n",
+      "BOUNDS: UB = 1357 | LB = 1288 | Gap = 5.33 %\n",
+      "\n",
+      ">>>ITERATION 4\n",
+      "Time spent solving MP: 0.224\n",
+      "Time spent solving SP: 0.315\n",
+      "BOUNDS: UB = 1357 | LB = 1311 | Gap = 3.53 %\n",
+      "\n",
+      ">>>ITERATION 5\n",
+      "Time spent solving MP: 0.303\n",
+      "Time spent solving SP: 0.234\n",
+      "BOUNDS: UB = 1357 | LB = 1312 | Gap = 3.43 %\n",
+      "\n",
+      ">>>ITERATION 6\n",
+      "Time spent solving MP: 0.111\n",
+      "Time spent solving SP: 0.259\n",
+      "BOUNDS: UB = 1357 | LB = 1312 | Gap = 3.39 %\n",
+      "\n",
+      ">>>ITERATION 7\n",
+      "Time spent solving MP: 0.102\n",
+      "Time spent solving SP: 0.294\n",
+      "BOUNDS: UB = 1333 | LB = 1314 | Gap = 1.43 %\n",
+      "\n",
+      ">>>ITERATION 8\n",
+      "Time spent solving MP: 0.584\n",
+      "Time spent solving SP: 0.332\n",
+      "BOUNDS: UB = 1323 | LB = 1323 | Gap = 0.0 %\n",
+      "**OPTIMAL SOLUTION FOUND: 1323**\n",
+      "Time to solve WITH parallel SPs: 12.78353214263916\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0 = time()\n",
+    "kwargs = {'INSTANCE':'Full',\n",
+    "'NUM_VESSELS':1}\n",
+    "mp_parallelSPs = MP_parallelSPs(kwargs)\n",
+    "mp_parallelSPs.solve()\n",
+    "print(f'Time to solve WITH parallel SPs: {time()-t0}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -193,75 +307,86 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "Using license file /Users/haukbjornland/gurobi.lic\n",
+      "Academic license - for non-commercial use only\n",
       "Changed value of parameter LazyConstraints to 1\n",
       "   Prev: 0  Min: 0  Max: 1  Default: 0\n",
-      "2021-05-16 15:02:49,453\tINFO services.py:1172 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n",
-      "\u001b[2m\u001b[36m(pid=29965)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29965)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29965)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29965)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29970)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29970)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29970)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29970)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29967)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29967)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29967)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29967)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29964)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29964)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29964)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29964)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29968)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29968)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29968)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29968)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29959)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29959)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29963)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29963)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29963)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29963)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29959)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29959)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29969)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29969)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29969)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29969)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29961)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29961)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29961)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29961)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29966)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29966)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29966)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29966)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29962)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29962)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29962)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29962)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29960)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29960)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29960)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29960)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29983)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29983)\u001b[0m Academic license - for non-commercial use only\n",
-      "\u001b[2m\u001b[36m(pid=29983)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
-      "\u001b[2m\u001b[36m(pid=29983)\u001b[0m Academic license - for non-commercial use only\n",
+      "2021-05-16 16:06:51,529\tINFO services.py:1172 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n",
+      "\u001b[2m\u001b[36m(pid=32671)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32676)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32676)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32670)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32671)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32670)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32669)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32669)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32667)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32667)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32673)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32673)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32675)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32675)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32668)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32668)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32666)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32666)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32677)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32677)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32674)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32674)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32672)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32672)\u001b[0m Academic license - for non-commercial use only\n",
+      "\u001b[2m\u001b[36m(pid=32696)\u001b[0m Using license file /Users/haukbjornland/gurobi.lic\n",
+      "\u001b[2m\u001b[36m(pid=32696)\u001b[0m Academic license - for non-commercial use only\n",
       "\n",
       ">>>ITERATION 1\n",
-      "Time spent solving MP: 0.002\n",
-      "Time spent solving SP: 0.539\n",
-      "BOUNDS: UB = 7869 | LB = 7869 | Gap = 0.0 %\n",
-      "**OPTIMAL SOLUTION FOUND: 7869**\n",
-      "Time to solve WITH parallel SPs: 28.89109182357788\n"
+      "Time spent solving MP: 0.004\n",
+      "Time spent solving SP: 0.232\n",
+      "BOUNDS: UB = 1478 | LB = 959 | Gap = 54.06 %\n",
+      "\n",
+      ">>>ITERATION 2\n",
+      "Time spent solving MP: 0.017\n",
+      "Time spent solving SP: 0.245\n",
+      "BOUNDS: UB = 1357 | LB = 1144 | Gap = 18.59 %\n",
+      "\n",
+      ">>>ITERATION 3\n",
+      "Time spent solving MP: 0.03\n",
+      "Time spent solving SP: 0.193\n",
+      "BOUNDS: UB = 1357 | LB = 1288 | Gap = 5.33 %\n",
+      "\n",
+      ">>>ITERATION 4\n",
+      "Time spent solving MP: 0.225\n",
+      "Time spent solving SP: 0.27\n",
+      "BOUNDS: UB = 1357 | LB = 1311 | Gap = 3.53 %\n",
+      "\n",
+      ">>>ITERATION 5\n",
+      "Time spent solving MP: 0.231\n",
+      "Time spent solving SP: 0.165\n",
+      "BOUNDS: UB = 1357 | LB = 1312 | Gap = 3.43 %\n",
+      "\n",
+      ">>>ITERATION 6\n",
+      "Time spent solving MP: 0.105\n",
+      "Time spent solving SP: 0.18\n",
+      "BOUNDS: UB = 1357 | LB = 1312 | Gap = 3.39 %\n",
+      "\n",
+      ">>>ITERATION 7\n",
+      "Time spent solving MP: 0.086\n",
+      "Time spent solving SP: 0.191\n",
+      "BOUNDS: UB = 1333 | LB = 1314 | Gap = 1.43 %\n",
+      "\n",
+      ">>>ITERATION 8\n",
+      "Time spent solving MP: 0.54\n",
+      "Time spent solving SP: 0.075\n",
+      "BOUNDS: UB = 1323 | LB = 1323 | Gap = 0.0 %\n",
+      "**OPTIMAL SOLUTION FOUND: 1323**\n",
+      "Time to solve WITH parallel SPs: 11.887457132339478\n"
      ]
     }
    ],
    "source": [
     "t0 = time()\n",
-    "kwargs = {'INSTANCE':'Full',\n",
-    "'NUM_VESSELS':0, 'DISCOUNT_FACTOR':0.95}\n",
+    "kwargs = {'INSTANCE':'Small',\n",
+    "'NUM_VESSELS':1}\n",
     "mp_parallelSPs = MP_parallelSPs(kwargs)\n",
     "mp_parallelSPs.solve()\n",
     "print(f'Time to solve WITH parallel SPs: {time()-t0}')"
